@@ -9,7 +9,20 @@ public class Teste {
         String[] nomes = new String[5];
 
         int idade = 29;
-        Integer iddeRef = new Integer(29);
+        Integer idadeRef = Integer.valueOf(29); //autoboxing
+        System.out.println(idadeRef.doubleValue());
+
+        System.out.println(Integer.MAX_VALUE);
+        System.out.println(Integer.MIN_VALUE);
+        System.out.println(Integer.SIZE);
+        System.out.println(Integer.BYTES);
+
+        int valor = idadeRef.intValue(); //unboxing
+        String s = args[0];//"10"
+        //Integer numero = Integer.valueOf(s);
+        int numero = Integer.parseInt(s);
+        System.out.println(numero);
+
         List numeros = new ArrayList();
         numeros.add(idade);
     }
